@@ -5,6 +5,9 @@
 @section v2_06 Changes with libapreq2-2.06
 
 
+- Perl API [joes]
+  Fix cookie domain/path munging in Apache2::Cookie::new().
+
 
 @section v2_05_dev Changes with libapreq2-2.05-dev (released May 5, 2005)
 
